--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,21 @@ body {
 h1 {
   color: #000080;
 }
+
+p {
+  color: black
+}
+
+h3 {
+  font-weight: 600;
+  color: black;
+}
+
+.gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+}
